--- a/wp-content/themes/sdsu/style.scss
+++ b/wp-content/themes/sdsu/style.scss
@@ -2763,6 +2763,61 @@ footer {
 }
 
 
+/* Mock Interview */
+
+
+.county_wrapper {
+	border-bottom: 1px solid #ccc;
+	margin-bottom:35px;
+	padding-bottom:0px;
+	&:last-of-type {
+		border: none;
+	}
+}
+
+.spokes_wrapper {
+	border-bottom: 1px solid #ccc;
+	margin-bottom:25px;
+	padding-bottom:35px;
+	width:100%;
+	&:last-of-type {
+		border-bottom: none;
+	}
+}
+
+
+span.mock_interview_county {
+	color:#9b010a;
+	display: block;
+	font-size:18px;
+	font-weight: bold;
+	margin-bottom:25px;
+}
+
+span.mock_interview_titles {
+	font-weight: bold;
+	display: block;
+	color:#424242;
+	margin-bottom:5px;
+}
+
+span.mock_int_name {
+	margin-bottom:25px;
+	display: block;
+}
+
+
+img.mock_int_image {
+	width: 100%;
+	height:auto;
+	margin:20px 0;
+	display: block;
+	max-width: 350px;
+}
+
+
+
+
 @media screen and (min-width: 940px) {
 	
 	
@@ -2904,6 +2959,70 @@ body.single-academy_photo_wall #content {
 // 	margin:0 40px 30px 0;
 	
 }
+
+
+
+
+
+
+
+
+
+/* Mock Interview */
+
+
+.county_wrapper {
+	
+}
+
+.spokes_wrapper {
+	overflow: hidden;
+	max-height: 381px;
+	
+	&:last-of-type {
+		
+	}
+}
+
+.spokes_col {
+	
+	float:left;
+	&:nth-of-type(1) {
+		width:15%
+	}
+	&:nth-of-type(2) {
+		width:15%
+	}
+	&:nth-of-type(3) {
+		width:35%
+	}
+	&:nth-of-type(4) {
+		width:35%
+	}
+}
+
+
+span.mock_interview_county {
+	
+}
+
+span.mock_interview_titles {
+	
+}
+
+span.mock_int_name {
+	
+}
+
+
+img.mock_int_image {
+	
+	max-width:300px;
+}
+
+
+
+
 
 
 
