--- a/wp-content/themes/sdsu/style.scss
+++ b/wp-content/themes/sdsu/style.scss
@@ -532,7 +532,10 @@ body.page.page-id-67 span.edit-link {
 	margin:17px 0 7px;
 }
 
-
+img.conf_gif {
+	max-width: 100%;
+	margin-top:35px;
+}
 
 
 
