--- a/wp-content/themes/sdsu/style.scss
+++ b/wp-content/themes/sdsu/style.scss
@@ -537,6 +537,15 @@ img.conf_gif {
 	margin-top:35px;
 }
 
+a.conf_gif {
+	text-decoration: none;
+	text-align: center;
+	display: block;
+	margin-top:10px;
+	font-size: 16px;
+	color:#9b010a;
+}
+
 
 
 /* */
