--- a/wp-content/themes/sdsu/style.scss
+++ b/wp-content/themes/sdsu/style.scss
@@ -5513,7 +5513,7 @@ nav#desktop_menu ul li.menu-item-33 ul.sub-menu li.menu-item-3277 a
 }
 
 body.staffintranet div#wpadminbar {
-	display: none;
+	// display: none;
 }
 
 
